deploy/referenceapp/webapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-demo-api
  namespace: azure-resources
  labels:
    app: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
        - name: otel-demo-api
          image: datasynchroacr.azurecr.io/web-api:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
