deploy/referenceapp/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-demo-app
  namespace: azure-resources
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: otel-demo-app
          image: datasynchroacr.azurecr.io/web-app:latest
          ports:
            - containerPort: 5000
