deploy/referenceapp/chatbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
  namespace: azure-resources
  labels:
    app: chatbot

spec:
  selector:
    app: chatbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
